# patest

./: .gitignore  LICENSE  README.md
agg/c/bin_tree/: Makefile  bin_tree.c  bin_tree.h  main.c  stack.c  stack.h
agg/c/oop/: CMakeLists.txt
agg/c/oop/src/: CMakeLists.txt  circle.c  circle.h  main.c  shape.c  shape.h  square.c  square.h  triangle.c  triangle.h
agg/c/path/: CMakeLists.txt  License.txt  Makefile  config.h  config.h.in  main.c  path.c  path.h  stack.c
agg/c/path/extra/: math.c
agg/c/path/lib/: CMakeLists.txt  check.c  check.h  path.c
agg/c/path/src/extra/: CMakeLists.txt  math.h
agg/c/path/src/lib/: stack.h
agg/c/path/src/main/: CMakeLists.txt  config.h  config.h.in  main.c
agg/c/shm/: main.c
agg/go/stringutil/: reverse.go  reverse_test.go
agg/python/ml/decision_tree/: entropie.py
agg/python/ml/knn/: dating.py  recognize.py
competition/leetcode/: advantageCount.java  allPathsSourceTarget.java  allPossibleFBT.java  ambiguousCoordinates.java  arrangeCoins.java  arrayNesting.java  numberOfArithmeticSlices.java
competition/leetcode/java/: advantageCount.java
competition/pat/pat-a-practise/1003. Emergency (25)/: Emergency (25).cpp
competition/pat/pat-a-practise/1004. Counting Leaves (30)/: Counting Leaves (30).cpp  Counting Leaves (30).md
competition/pat/pat-a-practise/1005. Spell It Right (20)/: Spell It Right (20).md
competition/pat/pat-a-practise/1007. Maximum Subsequence Sum (25)/: Maximum Subsequence Sum (25).cpp  Maximum Subsequence Sum (25).md
competition/pat/pat-a-practise/1008. Elevator (20)/: Elevator (20).cpp
competition/pat/pat-a-practise/1009. Product of Polynomials (25)/: Product of Polynomials (25).cpp
competition/pat/pat-a-practise/1011. World Cup Betting (20)/: World Cup Betting (20).cpp
competition/pat/pat-a-practise/1012. The Best Rank (25)/: The Best Rank (25).cpp
competition/pat/pat-a-practise/1015.Reversible Primes (20)/: Reversible Primes (20).cpp  tempCodeRunnerFile
competition/pat/pat-a-practise/1020. Tree Traversals (25)/: Tree Traversals (25).md
competition/pat/pat-a-practise/1032. Sharing (25)/: Sharing (25).md
competition/pat/pat-a-practise/1043. Is It a Binary Search Tree (25)/: Is It a Binary Search Tree (25).cpp
competition/pat/pat-a-practise/1052. Linked List Sorting (25)/: Linked List Sorting (25).cpp
competition/pat/pat-a-practise/1053. Path of Equal Weight (30)/: Path of Equal Weight (30).cpp
pat-a-practise/1001. A+B Format (20)/: A+B Format (20).cpp  A+B Format (20).md
pat-a-practise/1001.A+B Format (20)/: A+B Format (20).cpp
pat-a-practise/1002. A+B for Polynomials (25)/: A+B for Polynomials (25).cpp  A+B for Polynomials (25).md
pat-a-practise/1003. Emergency (25)/: Emergency (25).cpp  Emergency (25).md
pat-a-practise/1004. Counting Leaves (30)/: Counting Leaves (30).cpp
pat-a-practise/1005. Spell It Right (20)/: Spell It Right (20).cpp
pat-a-practise/1006. Sign In and Sign Out (25)/: Sign In and Sign Out (25).cpp  Sign In and Sign Out (25).md
pat-a-practise/1008. Elevator (20)/: Elevator (20).md
pat-a-practise/1009. Product of Polynomials (25)/: Product of Polynomials (25).cpp  Product of Polynomials (25).md
pat-a-practise/1010. Radix (25)/: Radix (25).cpp  Radix (25).md
pat-a-practise/1011. World Cup Betting (20)/: World Cup Betting (20).cpp  World Cup Betting (20).md
pat-a-practise/1012. The Best Rank (25)/: The Best Rank (25).md
pat-a-practise/1013. Battle Over Cities (25)/: Battle Over Cities (25).cpp  Battle Over Cities (25).md
pat-a-practise/1014. Waiting in Line (30)/: Waiting in Line (30).cpp
pat-a-practise/1020. Tree Traversals (25)/: Tree Traversals (25).cpp  a.out
pat-a-practise/1032. Sharing (25)/: Sharing (25).cpp  Sharing (25).md
pat-a-practise/1043. Is It a Binary Search Tree (25)/: Is It a Binary Search Tree (25).cpp  Is It a Binary Search Tree (25).md
pat-a-practise/1052. Linked List Sorting (25)/: Linked List Sorting (25).md
pat-a-practise/1053. Path of Equal Weight (30)/: Path of Equal Weight (30).cpp  Path of Equal Weight (30).md
